-------- Fixed vite config and package.json -------- * Fixed wrong base and homepages settings

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-app",
-  "homepage": "https://dongik-sudo.github.io",
+  "homepage": "https://don-gik.github.io/react-prac1/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
